View Issue Details

IDProjectCategoryView StatusLast Update
0023251Open CASCADEOCCT:Data Exchangepublic2015-06-15 12:42
ReportergkaAssigned Togka 
PrioritynormalSeveritycrash 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.3 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023251: Crash during reading materials from STEP file for case when name of material is not set.
DescriptionCrash during reading materials from STEP file for case when name of material is not set.
Steps To ReproduceThis bug it is possible to reproduce on attached file in DRAW by command:

ReadStep D1 dm1-oc-214.stp
TagsNo tags attached.
Test case numberchl 935 Q0

Attached Files

  • dm1-oc-214.zip (43,937 bytes)
  • Q0 (596 bytes)

Relationships

related to 0026342 closedbugmaster No materials are read from STEP 
child of 0022962 closedbugmaster Invalid realization of reading and writing material in STEP. 

Activities

gka

2012-07-09 18:02

developer  

dm1-oc-214.zip (43,937 bytes)

gka

2012-07-09 18:07

developer   ~0020881

Attached file dm1-oc-214.stp presented by Datakit (dated 2008) on CAX-IF read with crash in current version STEPCAFControl_Reader. The file has wrong DESCRIPTIVE_REPRESENTATION_ITEM (having one
instead of two strings).

gka

2012-07-09 18:14

developer   ~0020882

Branch CR23251 is ready to review.

abv

2012-07-09 18:19

manager   ~0020883

No remarks, please test

mkv

2012-07-10 17:23

tester   ~0020895

Dear BugMaster,
The workbenches
KAS:dev:mkv-23251-occt (GIT branch CR23251)
KAS:dev:mkv-23251-products (GIT master)
were compiled on Linux platform and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
chl 935 Q0 testing case was created for issue.
It is OK in this branch.
It is FAULTY in in current master (KAS:dev:products-20120622-opt).

See results in /QADisk/occttests/results/KAS/dev/mkv-23251-products_10072012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120622-opt_22062012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

mkv

2012-07-10 17:24

tester  

Q0 (596 bytes)

Related Changesets

occt: master 87073a10

2012-07-09 13:52:35

gka

Details Diff
0023251: Crash during reading materials from STEP file for case when name of material is not set.

Fix for case when materials in STEP file was written invalid way
Affected Issues
0023251
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx Diff File

Issue History

Date Modified Username Field Change
2012-07-09 10:23 gka New Issue
2012-07-09 10:23 gka Assigned To => gka
2012-07-09 10:25 gka Relationship added child of 0022962
2012-07-09 18:02 gka File Added: dm1-oc-214.zip
2012-07-09 18:07 gka Note Added: 0020881
2012-07-09 18:14 gka Note Added: 0020882
2012-07-09 18:14 gka Assigned To gka => abv
2012-07-09 18:14 gka Status new => resolved
2012-07-09 18:19 abv Note Added: 0020883
2012-07-09 18:19 abv Assigned To abv => bugmaster
2012-07-09 18:19 abv Status resolved => reviewed
2012-07-09 18:25 gka Steps to Reproduce Updated
2012-07-09 19:31 mkv Assigned To bugmaster => mkv
2012-07-10 17:23 mkv Note Added: 0020895
2012-07-10 17:24 mkv File Added: Q0
2012-07-10 17:25 mkv Test case number => chl 935 Q0
2012-07-10 17:25 mkv Assigned To mkv => bugmaster
2012-07-10 17:25 mkv Status reviewed => tested
2012-07-17 17:50 gka Changeset attached => occt master 87073a10
2012-07-17 17:52 gka Assigned To bugmaster => gka
2012-07-17 17:52 gka Status tested => verified
2012-07-17 17:52 gka Resolution open => fixed
2012-11-16 13:15 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:17 bugmaster Status verified => closed
2015-06-15 12:42 abv Relationship added related to 0026342