0023251: Crash during reading materials from STEP file for case when name of material is not set.

Fix for case when materials in STEP file was written invalid way